--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -13,7 +13,7 @@
 -->
 
   <div class="header-mid">
-    <a href="#">みんなに見てもらう</a>
+    <a href="#">POST+</a>
   </div>
 
   <div class="header-right">
@@ -24,11 +24,7 @@
 
 
 <div class="wrapper">
-  <% if flash[:notice] %>
-   <div class="flash">
-     <%= flash[:notice] %>
-   </div>
-  <% end %>
+<!---
   <div class="wrapper-left">
     <img src="/top_title.png">
     <p>新しいサービス,アイデアをいち早く公開して<br>たくさんの人に使ってもらう場です。</p>
@@ -37,6 +33,7 @@
     <img src="/logo.png">
   </div>
 </div>
+--->
 
 <div class="discription">
   <h1>towato</h1>
