--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -14,6 +14,7 @@
     <input type="submit" value="ログイン" class="submit">
   <% end %>
   </div>
+  <%= link_to("新規登録","signup", class: "submit") %>
     <!--<p>or</p>
     <%= link_to("facebookでログイン", "#", class: "square_btn_facebook",) %>
     <%= link_to("twitterでログイン", "#", class: "square_btn_twitter") %>
