--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -44,6 +44,15 @@ html {
     background-color: #ffffff;
 }
 
+@media(max-width: 600px){
+	.square_btn_login{
+		display: none;
+	}
+	.square_btn_new{
+		display:none;
+	}
+}
+
 /*ログアウトボタン*/
 .square_btn_logout{
 	display: inline-block;
