--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -2,12 +2,11 @@
 
 //   投稿画面   //
 .create_post{
-  margin-top: 100px;
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+  width: 600px;
   display: block;
   height: 500px;
+  margin: 0 auto;
+  padding-top: 100px;
 }
 
 .create_post h2{
@@ -41,21 +40,63 @@
   border: none;
 }
 
-////個別のアイデア画面///
+@media (max-width: 600px){
+  .create_post h2{
+    font-size: 18px;
+  }
 
-.show{
+  .create_post{
+    width: 80%;
+  }
+}
+
+////個別のアイデア画面///
+@media screen and (max-width: 600px){
+  .show{
+    width: 100%!important;
+  }
+
+  .title{
+    font-size: 18px!important;
+  }
+}
+
+
+
+.title{
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  padding-top:20px;
+  padding-bottom: 20px;
+}
+
+
+.background{
   padding-top: 60px;
   width: 100%;
-  background-color: #f8f8f8;
+  margin: 0 auto;
   padding-bottom: 30px;
-  height: 800px;
+  height: 600px;
 }
 
-.show h1{
-  font-size: 34px;
-  color: #202020;
+.back a{
+  text-decoration: none;
+  color: #606060;
+}
+
+.back {
+  margin-top: 10px;
   text-align: center;
 }
+.show{
+  width: 600px;
+  background-color: #fff;
+  margin: 0 auto;
+  margin-top: 60px;
+  border-radius: 10px;
+}
+
 
 .show p{
 font-size: 18px;
@@ -89,20 +130,31 @@ line-height: 30px;
   text-align: center;
 }
 
+
+
 .top-image img{
   width: 600px;
   height:400px;
   border: 2px solid #ea3e63;
   border-radius: 10px;
+}
 
+@media(max-width: 600px){
+  .top-image img{
+    width: 300px;
+    height: 200px;
+  }
+
+  .show p{
+    font-size: 14px;
+  }
 }
 
 .post-content{
   border-radius: 10px;
-  width: 800px;
+  width: 80%;
   margin-top: 10px;
   background-color: #fff;
-  text-align: center;
   margin: 0 auto;
 }
 
@@ -110,11 +162,19 @@ line-height: 30px;
   color: #606060;
 }
 
+.post .detail h3{
+  color: #606060;
+  padding-left: 70px;
+}
 
-///index///
+.post .detail p{
+  padding-left: 20px;
+}
+///////////index////////////
 .contents{
   background-color: #ffe1e0;
   padding-top:20px;
+  padding-bottom:50px;
   height: 1000px;
 }
 
@@ -123,6 +183,11 @@ line-height: 30px;
   margin: 0 auto;
   background-color: #fff;
   margin-top:60px;
+}
+
+.indiv{
+  width: 600px;
+  background-color: #fff;
 }
 
 .post{
@@ -157,6 +222,13 @@ line-height: 30px;
   z-index: 100;
 }
 
+.henshu a{
+  text-decoration: none;
+  color: #808080;
+  z-index: 100;
+  margin-left: 20px;
+}
+
 .post p{
   font-size: 13px;
   margin-left: 70px;
@@ -170,6 +242,19 @@ line-height: 30px;
 .author {
   display: flex;
 }
+
+@media (max-width: 600px){
+  .post img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .posts {
+    width: 100%;
+  }
+}
+
+
 
 
 
