--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Towato</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -23,18 +24,17 @@
       --->
 
       <div class="header-mid">
-        <%= link_to("みんなに見てもらう","/posts/new") %>
+        <%= link_to("POST+","/posts/new") %>
       </div>
 
       <% current_user = User.find_by(id: session[:user_id]) %>
 
       <% if current_user %>
-
         <div class="header-right">
-        <%= link_to('ログアウト', '/logout', class: 'square_btn_logout') %>
         <a href="<%= "/users/#{@current_user.id}" %>">
           <img src="<%= "/user_images/#{@current_user.image_name}" %>">
         </a>
+        </div>
 
       <% else %>
 
